--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,8 @@
 
       <h1>Classy Hound T-Shirts</h1>
 
+      <!-- Populated by JS -->
+
     </div>
 
     <script src="js/bundle.js"></script>
